--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -17,3 +17,13 @@ auth:
   client:
     grpc_address: "localhost:50051"
     timeout: 5s
+
+storage:
+  type: "minio"
+  minio:
+    endpoint: "localhost:9000"
+    access_key_id: "minioadmin"
+    secret_access_key: "minioadmin"
+    use_ssl: false
+    bucket_name: "dormitory-life"
+    public_url: "http://localhost:9000"
