--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,24 @@ services:
       retries: 5
     restart: "no"
 
+  storage:
+    image: minio/minio
+    container_name: dormitory-minio
+    ports:
+      - "9000:9000" # S3 API
+      - "9001:9001" # Web UI
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    volumes:
+      - ./data/minio:/data
+    command: server /data --console-address ":9001"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+
   core-service:
     build:
       context: .
@@ -27,5 +45,7 @@ services:
       - 8082:8082
     depends_on:
       db:
+        condition: service_healthy
+      storage:
         condition: service_healthy
     restart: "no"
