--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,24 @@ services:
       timeout: 20s
       retries: 3
 
+  broker:
+    image: rabbitmq:3.12-management-alpine
+    container_name: rabbitmq
+    restart: unless-stopped
+    ports:
+      - "5672:5672" # AMQP порт
+      - "15672:15672" # Web UI
+    environment:
+      RABBITMQ_DEFAULT_USER: admin
+      RABBITMQ_DEFAULT_PASS: admin
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
   core-service:
     build:
       context: .
@@ -49,3 +67,6 @@ services:
       storage:
         condition: service_healthy
     restart: "no"
+
+volumes:
+  rabbitmq_data:
